...
      "pause": "Mettre en pause",
      "resume": "Reprendre le chronomètre",
      "stop": "Terminer et enregistrer"
    }
  },
  "tabs": {
    "today": "Aujourd'hui",
    "tasks": "Tâches",
    "journal": "Journal",
    "calendar": "Calendrier",
    "menu": "Menu",
    "vacation": {
      "departIn_one": "Départ dans {{count}}j",
      "departIn_other": "Départ dans {{count}}j",
      "lastDay": "Dernier jour !",
      "endsIn_one": "Fin dans {{count}}j",
      "endsIn_other": "Fin dans {{count}}j",
...
      "family": "Vie de famille",
      "system": "Système"
    },
    "items": {
      "routines": "Routines",
      "appointments": "Rendez-vous",
      "meals": "Repas",
      "recipes": "Idées recettes",
      "shopping": "Courses",
      "stock": "Stocks & Fournitures",
      "health": "Santé",
      "moods": "Humeurs",
      "dietary": "Préférences alimentaires",
...
